Commit before reshuffling

--- a/submissions/dissertation/bibliography.bib
+++ b/submissions/dissertation/bibliography.bib
@@ -1,3 +1,59 @@
+@misc{Hunchentoot,
+  title = {{Hunchentoot: The Common Lisp web server formerly known as TBNL}},
+  howpublished =
+  {\url{https://edicl.github.io/hunchentoot/}},
+  note = {Accessed: 2020-09-04}
+}
+
+@misc{Quicklisp,
+  title = {Quicklisp beta},
+  howpublished =
+  {\url{https://www.quicklisp.org/beta/}},
+  note = {Accessed: 2020-09-04}
+}
+
+@misc{CL-WHO,
+  title = {{CL-WHO - Yet another Lisp markup language}},
+  howpublished =
+  {\url{https://edicl.github.io/cl-who/}},
+  note = {Accessed: 2020-09-04}
+}
+
+@misc{Mito,
+  title = {The Mito reference manual},
+  howpublished =
+  {\url{https://quickref.common-lisp.net/mito.html#Introduction}},
+  note = {Accessed: 2020-09-04}
+}
+
+@misc{SXQL,
+  title = {The SXQL reference manual},
+  howpublished =
+  {\url{https://quickref.common-lisp.net/sxql.html}},
+  note = {Accessed: 2020-09-04}
+}
+
+@misc{Parenscript,
+  title = {Parenscript},
+  howpublished =
+  {\url{https://common-lisp.net/project/parenscript/}},
+  note = {Accessed: 2020-09-04}
+}
+
+@misc{Smackjack,
+  title = {The Smackjack reference manual},
+  howpublished =
+  {\url{https://quickref.common-lisp.net/smackjack.html}},
+  note = {Accessed: 2020-09-04}
+}
+
+@misc{ngrok,
+  title = {Ngrok},
+  howpublished =
+  {\url{https://ngrok.com/}},
+  note = {Accessed: 2020-09-04}
+}
+
 @book{FisherYates1938,
 	title = {Statistical tables for biological, agricultural and medical research},
 	author = {Fisher, Ronald A and Yates, Frank},
