--- a/submissions/dissertation/sections/background.tex
+++ b/submissions/dissertation/sections/background.tex
@@ -231,3 +231,13 @@ and while the work of Freeman et al.~\cite{Freeman2017} evades the problem of
 determining the outcome by setting it to the proportion of users reporting a
 ``yes'' outcome, this does nothing to penalise the initial creator for
 introducing an ambiguous market.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\textwidth]{predictit}
+	\caption{The \emph{PredictIt} prediction market for the 2020 U.S.
+	presidential election. As of \today\ Joe Biden is perceived to be more
+	likely to become President.}
+	\label{fig:predictit}
+\end{figure}
+
