--- a/submissions/dissertation/sections/implementation.tex
+++ b/submissions/dissertation/sections/implementation.tex
@@ -16,6 +16,8 @@ a separate area of functionality. These are as follows:
 
 \subsection{Database}
 
+\label{sec:database}
+
 \subsubsection{Table Definitions}
 
 The database is responsible for persistent storage. It is implemented using the
@@ -169,6 +171,8 @@ analyse the system's performance.
 
 \subsection{Trading}
 
+\label{sec:trading}
+
 Trading allows us to gather public sentiment on the user-defined securities,
 and this part of the system is responsible for setting share prices,
 calculating the cost of transactions, and charging fees to raise funds for the
@@ -204,7 +208,7 @@ $q=q_1-q_0$:
 	C_b (q) = b \log (1 + e^{q/b})
 \end{equation}
 
-In these cost functions, $b$ appears as a parameter that allows us to control
+In these cost functions, $b>0$ appears as a parameter that allows us to control
 the responsiveness of $C$. A lower value of $b$ corresponds to a more sensitive
 share price, meaning the price will change more quickly for smaller
 transactions. It also controls the market's risk of loss: for markets with
@@ -402,7 +406,8 @@ arbiter $j$, as follows:
 
 We use the same approach to compute $\mu_0^i$ for each $i$. The final values of
 $\mu_1$ and $\mu_0$ are then calculated by taking the minimum and maximum
-across all $\mu_1^i$ and $\mu_0^i$, respectively.
+across all $\mu_1^i$ and $\mu_0^i$, respectively. Thus we have common update
+probabilities across all agents.
 
 \subsubsection{Rewarding the arbiters}
 
@@ -433,10 +438,10 @@ as an unresolved market on the user's dashboard.
 \end{lstlisting}
 
 We next compute the random pairing of arbiters. Lisp has no function to shuffle
-a list, so we implement the Fisher-Yates~\cite[pg.~26-27]{FisherYates1938}
-algorithm ourselves as the \code{shuffle} function in
-Listing~\ref{lst:randomPairing}. The random pairing is then formed by walking
-through the shuffled list and collecting adjacent elements as pairs.
+a list, so we implement the Fisher-Yates
+algorithm~\cite[pg.~26-27]{FisherYates1938} ourselves as the \code{shuffle}
+function in Listing~\ref{lst:randomPairing}. The random pairing is then formed
+by walking through the shuffled list and collecting adjacent elements as pairs.
 
 \begin{lstlisting}[
 	label={lst:randomPairing},
@@ -467,6 +472,8 @@ Equation~\ref{eq:kParameter} we set $k = \max_i 2|n_i|/m\delta$, and use this
 to pay arbiters according to Equation~\ref{eq:oneOverPrior}.
 
 \subsection{Server}
+
+\label{sec:server}
 
 The code from each of the separate areas of the market is then drawn together
 in the file \code{server.lisp}, in which we set up the web server, define the
@@ -536,199 +543,241 @@ specify the content that makes the page unique via the \code{body} parameter.
                           ,@body))))))
 \end{lstlisting}
 
-Another feature of Hunchentoot ... 
+Hunchentoot also automatically provides session handling -- this is obviously
+vital for writing a web application such as ours to allow multiple users to be
+logged on at the same time and present to them the appropriate information.
+All we need to do is define the symbol \code{session-user} in the data
+structure for session handling, then when a user logs in we set this value to
+the matching user retrieved from the database with \code{(session-value
+'session-user)}. This allows us to display consistent user information across
+different webpages within the same session, such as the user's budget or their
+portfolio of securities. Finally, most user interaction is achieved through the
+use of forms, allowing the user to log in, trade shares, and report outcomes,
+so we need a means of accessing this information. Hunchentoot provides the
+\code{get-parameter}, \code{post-parameter}, and \code{parameter} functions to
+retrieve the values these forms send to and from the different webpages.
 
 % session handling
 % sending data e.g. (parameter ...)
 
 \subsection{User Experience}
 
-% AJAX and Javascript
+\label{sec:user-experience}
 
-%Defining such tables using Mito is as simple as using the \code{deftable}
-%macro, and is syntactically similar to defining a regular struct within Common
-%Lisp. Listing~\ref{lst:deftable} shows how we define the columns and their
-%associated datatypes. The macro defines default accessors\footnote{Functions
-%for accessing members of a struct.}, the slots \code{created\_at},
-%\code{updated\_at}, and a primary key \code{id} if none is specified. Insertion
-%is similarly straightforward: to insert a new entry into a table we create an
-%instance of the class that is implicitly defined when calling \code{deftable},
-%then call \code{create-dao}. To retrieve records from the database we use
-%either \code{select-dao}, which returns all records matching the conditions, or
-%\code{find-dao}, which returns only the first.
-%
-%\begin{lstlisting}[
-%	label={lst:deftable},
-%	language=lisp,
-%	captionpos=b,
-%	caption={Defining a table in Mito}]
-%(deftable security ()
-%    ((bet :col-type :text)
-%     (shares :initform 0
-%             :col-type :integer)
-%     (deadline :col-type :datetime)
-%     (outcome :col-type (or :double :null))))
-%\end{lstlisting}
-%
-%\subsection{Trading}
-%
-%Trading allows users to create arbitrary bets on binary events and then trade
-%shares in them. It also implements the trading fees on risk transactions
-%required to raise funds to reward arbiters and pay out stakeholders. To
-%calculate the trading fee, we first need to know whether the user is increasing
-%their risk (a ``risk transaction'') or they are simply liquidating a position
-%they already hold, and secondly whether they are buying or selling shares,
-%since these incur different charges.
-%
-%To create markets, quote their share prices, and compute the cost of a
-%transaction we use a market scoring rule. We use the commonly used Logarithmic
-%Market Scoring Rule (LMSR), created by Robin Hanson~\cite{LMSR}. As we have
-%mentioned, in any MSR an agent wishing to purchase $q'-q$ shares of a given
-%security must pay $C(q')-C(q)$ for convex, differentiable, monotonically
-%increasing function $C$. In the case of LMSR, for current number of shares $q$
-%and liquidity parameter $b$, this function is:
-%
-%\begin{equation}
-%	\label{eq:LMSR}
-%	C_b(q) = b \log (1 + e^{q/b})
-%\end{equation}
-%
-%This function also accommodates selling shares, in which case $q'<q$.  Since a
-%user must specify a desired amount of shares to buy or sell before we can
-%determine how much to charge them, we cannot use this function to directly
-%quote a share price. Instead, we can calculate the cost of the transaction were
-%the user to purchase a miniscule quantity of shares and quote this as the share
-%price. This is simply the derivative of Equation~\ref{eq:LMSR} and is given by:
-%
-%\begin{equation}
-%	\label{eq:LMSRprice}
-%	p_b(q) = \frac{ e^{q/b} }{ 1 + e^{q/b} }
-%\end{equation}
-%
-%Although Equation~\ref{eq:LMSRprice} quotes the share price, it is not accurate
-%to use it to calculate how much an agent should pay, since the agent's
-%participation in the market will immediately change this price. It does,
-%however, provide a useful means of describing to the user the perceived
-%likelihood of the event. For example for some security, at $q=0$ an equal
-%number of shares have been bought as have been sold, meaning the userbase as a
-%whole is equally unsure about whether the market will have a positive or
-%negative outcome. The quoted share price will be $p(0)=\$0.50$.  Similarly,
-%suppose $b=10$ and $q=20$, meaning twenty more shares have been bought than
-%sold in the market. This would yield a share price of $p_{10}(20) \approx
-%\$0.88$. Users feel more confident that the event will have a positive outcome,
-%since more people have bought shares, giving a higher share price. As mentioned
-%in Section~\ref{sec:oneOverPrior}, we interpret the closing price of the market
-%as the probability of a positive outcome, as it approximates how sure users
-%feel about the event's outcome.
-%
-%\begin{figure}[h]
-%	\centering
-%	\includegraphics[width=.8\textwidth]{market-creation}
-%	\caption{Creating a market for the wager, ``The weather will be hot on
-%	Friday''}
-%	\label{fig:marketCreation}
-%\end{figure}
-%
-%\subsection{Arbitration}
-%
-%\label{sec:arbitration}
-%
-%The arbitration stage of the mechanism seeks to resolve markets whose deadlines
-%have passed by gathering reports from arbiters and paying out, or demanding
-%money from, stakeholders. Since we will eventually be able to accommodate for
-%users to act as arbiters in market in which they themselves hold a position, we
-%allow any user to opt in to become an arbiter in an unresolved market.
-%Figure~\ref{fig:dashboard} shows the dashboard as it appears to a logged in
-%user, in which they are presented with all the currently active and unresolved
-%markets. 
-%
-%\begin{figure}[h]
-%	\centering
-%	\includegraphics[width=.8\textwidth]{dashboard}
-%	\caption{A user's dashboard, where they can see all active and unresolved
-%	markets}
-%	\label{fig:dashboard}
-%\end{figure}
-%
-%Once the user has opted in to arbitration they are taken to a form to submit
-%their report on the outcome, as well as estimations on their ``Positive
-%Belief'' and ``Negative Belief''. These are estimations of probabilities that,
-%given that the event \emph{actually} had a positive (respectively negative)
-%outcome, the user received a positive signal. This is important as we need to
-%take into account signal noise, given that wagers can be subjective: while the
-%positive and negative signal beliefs will be nearer to 1 and 0, respectively,
-%for an event such as the winner of a football match, since it will likely be
-%covered by many media outlets all reporting the true result, this may not
-%necessarily be the case where the outcome is more a matter of opinion. The
-%weakness of this approach is discussed in Section~\ref{sec:evaluation}.
-%
-%\begin{figure}[h]
-%	\centering
-%	\includegraphics[width=.8\textwidth]{arbitration}
-%	\caption{The interface for submitting a report as an arbiter}
-%	\label{fig:resolveSecurity}
-%\end{figure}
-%
-%These signal beliefs are used to compute the update probabilities $\mu_1$ and
-%$\mu_0$ which are used in the 1/prior-with-midpoint mechanism. Given the
-%closing price $\mu$ and the positive and negative signal beliefs
-%$Pr[x_i=1|X=1]$ and $Pr[x_i=1|X=0]$ for each arbiter $i$, we can compute the
-%positive update $\mu_1^i$ for each $i$ and randomly chosen $j$ as follows:
-%
-%\begin{equation}
-%	\begin{aligned}
-%		\mu_1^i & = Pr[x_j=1|x_i=1] \\
-%		& = Pr[x_j=1|X=0] \cdot Pr[X=0|x_i=1] + Pr[x_j=1|X=1] \cdot Pr[X=1|x_i=1]
-%	\end{aligned}
-%\end{equation}
-%
-%We use the same approach to compute the negative update $\mu_0^i$ for each $i$,
-%and hence we may now also compute the common updates $\mu_1$ and $\mu_0$ to pay
-%arbiters the correct reward for arbitration. Once done, we set the outcome of
-%the market to the fraction of arbiters that reported a positive outcome, paying
-%users who hold shares and taking money from users that sold shares short.
-%
-%\subsection{Server}
-%
-%The code contained in \code{server.lisp} is responsible both for setting up and
-%maintaining the Hunchentoot web server and defining the various pages and forms
-%with which users interact.  Hunchentoot makes interaction with the web server
-%straightforward. We initialise the server by creating an \code{easy-acceptor},
-%and once we have defined our webpages using CL-WHO we simply push them to the
-%dispatch table using \code{create-prefix-dispatcher} so that they may be
-%accessed. Hunchentoot also provides us with automatic session handling, meaning
-%we do not have to worry about the details of logging in users on different
-%machines at the same time: we simply define the symbol \code{session-user} in
-%the appropriate session-handling data structure, then set this to the logged in
-%user. We can then access this using \code{(session-value 'session-user)} to
-%display different material on the page and interact with the database according
-%to the current user. Finally, we use Hunchentoot to access the GET and POST
-%parameters users send to the server via forms with a call to the library's
-%\code{parameter} function. 
-%
-%Although there is little special to CL-WHO compared to other HTML-generating
-%libraries, it is useful to remain in the Lisp environment to define webpages
-%since we may use its powerful macro system. We use it to define a template for
-%a standard page, meaning we only need to specify the elements that make the
-%page unique and giving the web application a consistent style. This also
-%enables us to define pages and add the corresponding HTML generating function
-%to the dispatch table all within a single interface, hiding the unnecessary
-%details. Listing~\ref{lst:defineURL} shows how we are able to define both the
-%webpage, generate its content, and push it to the dispatch table in one.
-%
-%The code in \code{server.lisp} draws together the interfaces from other areas
-%of the system and actually executes the mechanism. This involves taking user
-%input to create custom markets, quote share prices, and collect and distribute
-%payments for the various interactions users may have with the market.
-%
-%\begin{lstlisting}[
-%	label={lst:defineURL},
-%	language=lisp,
-%	captionpos=b,
-%	caption={Defining webpages}]
-%(defmacro define-url-fn ((name) &body body)
-%  `(progn
-%     (defun ,name () ,@body)
-%     (push (create-prefix-dispatcher ,(format NIL "/~(~a~)" name) ',name)
-%           *dispatch-table*)))
-%\end{lstlisting}
+In Sections~\ref{sec:database}, \ref{sec:trading}, \ref{sec:arbitration}, and
+\ref{sec:server} we have detailed the manner in which we achieve the goals laid
+out in \ref{enm:goals} which implement the core features of any prediction
+market, as well as the specific behaviour making the peer prediction mechanism
+of Freeman et al.\ unique. In this section we shall detail the approach we take
+to making our prediction market more user-friendly and intuitive to use.
+
+The most important aspect behind making the web application is the
+integration of asynchronous server communications, meaning the possibility of
+displaying up-to-date information to the user without a page refresh, as well
+as triggering certain events to occur at a given time. For this we use the
+Quicklisp libraries Parenscript coupled with Smackjack to translate Lisp code
+to Javascript and allow us to communicate asynchronously with the server. We
+first use Parenscript for form validation on the client-side, and in particular
+to ensure that all required form fields are completed without needing to send
+the entire form to the server. Parenscript provides the function
+\code{ps-inline}, which allows us to insert Lisp code, that will be converted
+to a valid Javascript program, anywhere. Therefore on every form we wish to
+validate prior to sending its contents to the server, we can insert Javascript
+code as the \code{:onsubmit} attribute of the form, for example \code{(form
+:action "create-market" :method :POST :onsubmit (ps-inline ...)}. The way in
+which we implement this validation in a concise manner is again through the use
+of Lisp's macro system: Listing~\ref{lst:nonEmptyMacro} shows the three
+functions we define to dynamically check for completed fields. The function
+\code{make-nonempty-check} simply writes Lisp code that, by the time it is
+called within \code{ps-inline} will expand to the Javascript statement
+\code{field.value == 0}. The function \code{make-nonempty-list} allows us to
+simply specify a list of fields that we require to be non-empty and have it
+generate a collection of non-empty checks. Finally the macro
+\code{nonempty-fields} calls the previous function and splices it from a list
+to successive arguments to the \code{or} function. This is all wrapped within a
+call to \code{ps-inline}, yielding something similar to:
+
+\begin{lstlisting}[
+	label={},
+	caption={},
+	frame=none]
+if (a.value == "" || b.value == "" || ... ) {
+    alert("Please fill in all required fields");
+}
+\end{lstlisting}
+
+\begin{lstlisting}[
+	label={lst:nonEmptyMacro},
+	caption={Macro for ensuring all required fields are complete}]
+(defun make-nonempty-check (field)
+  `(equal (getprop ,field 'value) ""))
+
+(defun make-nonempty-list (fields)
+  (loop while fields
+        collecting (make-nonempty-check (pop fields))))
+
+(defmacro nonempty-fields (msg &rest fields)
+  `(ps-inline
+     (when (or ,@(make-nonempty-list fields))
+       (if (equal ,msg "")
+         (alert "Please fill in all required fields")
+         (alert ,msg))
+       (return false))))
+\end{lstlisting}
+
+We next turn our attention to implementing AJAX using the Smackjack library
+from Quicklisp, in conjunction with Parenscript. Similarly to how he defined
+functions to execute when we load a specific URL in Section~\ref{sec:server},
+we must also push our various AJAX functions to the dispatch table: Hunchentoot
+provides a special data structure, similar in function to the
+\code{easy-acceptor}, that handles all asynchronous calls in the form of the
+\code{ajax-processor}. We then create an AJAX dispatcher from this and push it
+to the dispatch table as before: 
+
+\begin{lstlisting}[
+	label={},
+	caption={},
+	frame=none]
+(push (create-ajax-dispatcher *ajax-processor*) *dispatch-table*)
+\end{lstlisting}
+
+We then define all of our AJAX functions using the Smackjack macro
+\code{defun-ajax}. This allows us to write functions in Lisp which perform some
+computation on the server side and send a response back to the client in some
+format. These function definitions are the same as any other in Lisp, with
+additional information to specify the AJAX processor associated with it, the
+method by which the data will be sent to the client, and the format that the
+client should expect it in. We use only one processor, \code{*ajax-processor*}
+which is initialised when the server starts, and we choose to send all data via
+an HTTP POST request as a JSON string.
+
+One manner in which we use this asynchronous communication is to quote a
+projected cost of a transaction to a user looking to trade. Since we cannot use
+the price function $p$ to do this, as we require the number of shares a user is
+looking to buy or sell in order to calculate $C_b(q')-C_b(q)$, we implement the
+write the cost function as an AJAX function that takes the user's desired
+quantity of shares and the current total number of shares to quote a price to
+them. The interface we present to the user restricts them to entering positive
+quantities only and checking a radio button to specify whether to buy or sell
+(to avoid confusion of needing to enter a negative number to sell), hence we
+also need the value of this radio button to compute the transaction cost. This
+function is given in Listing~\ref{lst:ajaxTransactionCost}. The function is now
+defined within Smackjack's namespace: next we need to define the function that
+calls it asynchronously in Javascript.
+
+\begin{lstlisting}[
+	label={lst:ajaxTransactionCost},
+	caption={Defining an AJAX function for computing transaction cost using
+	Smackjack}]
+(defun-ajax ajax-transaction-cost-quantity (quantity q buying-p)
+			(*ajax-processor* :method :POST :callback-data :json)
+
+			(if (stringp quantity) (setf quantity (parse-integer quantity)))
+			(if (stringp q) (setf q (parse-integer q)))
+			(let ((q* (if buying-p
+						(+ q quantity)
+						(- q quantity))))
+			(format NIL 
+					"{\"newShares\" : ~D, \"oldShares\" : ~D, \"cost\" : ~4\$}"
+					q*
+					q
+					(msr:transaction-cost q* q))))
+\end{lstlisting}
+
+The Javascript functions that call the AJAX functions need to be defined within
+the usual \code{script} tags, for which we simply wrap the appropriate Lisp
+code in the \code{(:script ...)} macro provided by Parenscript. For retrieving
+the transaction cost of a given trade, we define the function
+\code{ajax-transaction-cost-trade} as in
+Listing~\ref{lst:javascriptTransactionCost}. This function is responsible for
+getting the quantity of shares the user has input, the current outstanding
+quantity of shares, and which radio button has been checked to specify whether
+they are buying or selling. This is achieved by the Parenscript macro
+\code{chain}, which chains the list of arguments following it into a chain of
+function calls and attribute retrievals. Note that the two radio buttons
+specifying whether to buy or sell must necessarily have the same \code{id} and
+\code{name} field within the form, hence we cannot simply call
+\code{get-element-by-id} to retrieve the value. Instead, we call
+\code{get-element-by-names} to return both, then iterate through them to verify
+which one was checked. We then call the AJAX function we defined earlier from
+Smackjack, \code{ajax-transaction-cost-quantity}, to compute the transaction
+cost. This then triggers the callback function \code{display-projected-cost},
+which is responsible for actually modifying the value in the appropriate table
+cell. Listing~\ref{lst:javascriptTransactionCost} reflects the rest of this
+process.
+
+\begin{figure}[htp]
+	\subfloat[]{%
+		\includegraphics[width=\textwidth]{ajax-price-1}%
+	}
+
+	\subfloat[]{%
+		\includegraphics[clip,width=\textwidth]{ajax-price-2}%
+	}
+	\caption{Updating transaction costs asynchronously}
+\end{figure}
+
+\begin{lstlisting}[
+	label={lst:javascriptTransactionCost},
+	caption={Calling the AJAX function asynchronously}]
+(ps
+  (defun ajax-transaction-cost-trade ()
+	" calculate transaction cost when trading in market "
+	(let ((quantity (chain document (get-element-by-id :quantity) value))
+		  (q (chain document (get-element-by-id :old-shares) value))
+		  (radios (chain document (get-elements-by-name "buying")))
+		  checked
+		  buying-p)
+
+	  ;; find which radio button is checked
+	  (loop for option in radios do
+			(if (@ option checked)
+			  (setf checked (@ option value))))
+
+	  ;; checked is equal to 1 if "buy" is selected
+	  (setf buying-p (equal checked 1))
+
+	  (chain smackjack (ajax-transaction-cost-quantity
+						 quantity
+						 q
+						 buying-p
+						 display-projected-cost)))))
+\end{lstlisting}
+
+Finally, we use AJAX to automatically cease trading when a market's deadline
+has passed. We first define a Smackjack function that retrieves the most
+imminently expiring security, then compute the difference in seconds between
+the current time and its deadline. A JSON object is then returned containing
+this value, which we will use to set a timer for the page to reload. We next
+define the Javsacript function \code{set-timer} which takes this JSON object
+and sets the page to reload after this interval. This process is detailed in
+Listing~\ref{lst:setTimer}. This prevents user from trading shares after
+potentially knowing of the outcome, and instead reloads the page and lists the
+market as ``unresolved'' and no longer ``active''.
+
+\begin{lstlisting}[
+	label={lst:javascriptTransactionCost},
+	caption={Triggering the close of trading automatically}]
+(defun-ajax ajax-set-timer ()
+			(*ajax-processor* :method :POST :callback-data :json)
+
+			(let ((next-expiring (db:get-next-expiring-security
+								   (local-time:now)))
+				  timer)
+			  (unless (equal next-expiring NIL)
+				(setf timer (local-time:timestamp-difference
+							  (db:security-deadline next-expiring)
+							  (local-time:now)))
+			  (format NIL "{ \"security\" : ~S, \"seconds\" : ~D }"
+					  (db:security-bet next-expiring)
+					  (ceiling timer)))))
+
+;; within a (:script) tag elsewhere ...
+(ps
+  (defun set-timer ()
+	(chain smackjack
+		   (ajax-set-timer #'(lambda (response)
+							   (set-timeout (lambda ()
+											  (chain location (reload)))
+									 		(* (@ response seconds) 1000)))))))
+\end{lstlisting}
